--- a/tmpl/mails/password_recovery.html
+++ b/tmpl/mails/password_recovery.html
@@ -400,7 +400,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#424262;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 14px; color: #424262; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-<p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><strong><span style="font-size: 28px; line-height: 33px;">Your Pantahub password is almost restore</span></strong></p>
+<p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><strong><span style="font-size: 28px; line-height: 33px;">Pantahub.com Password Reset</span></strong></p></p>
 <p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><span style="font-size: 24px;"><span style="line-height: 28px; font-size: 24px;">Hello {{.Nick}},</span></span></p>
 </div>
 </div>
@@ -408,7 +408,11 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#424262;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:150%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 18px; color: #424262; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-<p style="font-size: 14px; line-height: 21px; text-align: center; margin: 0;">Let me get you a new password so you can see your account!,<br/>Click the button below and restore your password.</p>
+<p style="font-size: 14px; line-height: 21px; text-align: center; margin: 0;">
+We have received a request to reset the password associated<br/>
+with this email address. If you didn't make this request<br/>
+please disregard this email and no changes will happen.<br/><br/>
+Click the button below to restore your password.</p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
