Remove multiline from password reset email

--- a/tmpl/mails/password_recovery.html
+++ b/tmpl/mails/password_recovery.html
@@ -409,17 +409,15 @@
 <div style="color:#424262;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:150%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 18px; color: #424262; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
 <p style="font-size: 14px; line-height: 21px; text-align: center; margin: 0;">
-We have received a request to reset the password associated<br/>
-with this email address. If you didn't make this request<br/>
-please disregard this email and no changes will happen.<br/><br/>
-Click the button below to restore your password.</p>
+We have received a request to reset the password associated with this email address. If you didn't make this request please disregard this email and no changes will happen.<br/><br/>
+Click the button below to reset your password.</p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
 <div align="center" class="button-container" style="padding-top:15px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"><tr><td style="padding-top: 15px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:46.5pt; width:172.5pt; v-text-anchor:middle;" arcsize="7%" stroke="false" fillcolor="#424262"><w:anchorlock/><v:textbox inset="0,0,0,0"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:16px"><![endif]-->
 <div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#424262;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;width:auto; width:auto;;border-top:1px solid #424262;border-right:1px solid #424262;border-bottom:1px solid #424262;border-left:1px solid #424262;padding-top:15px;padding-bottom:15px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:15px;padding-right:15px;font-size:16px;display:inline-block;">
-<span style="font-size: 16px; line-height: 32px;"><a href="{{.Link}}" style="text-decoration: none; color: #ffffff; font-weight: bold">Restore your password</a></span>
+<span style="font-size: 16px; line-height: 32px;"><a href="{{.Link}}" style="text-decoration: none; color: #ffffff; font-weight: bold">Reset your password</a></span>
 </span></div>
 <!--[if mso]></center></v:textbox></v:roundrect></td></tr></table><![endif]-->
 </div>
