Change pantacor hub and reddit logo to emails

--- a/tmpl/mails/password_recovery.html
+++ b/tmpl/mails/password_recovery.html
@@ -367,7 +367,7 @@
 <!--<![endif]-->
 <div align="center" class="img-container center fixedwidth" style="padding-right: 0px;padding-left: 0px;">
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr style="line-height:0px"><td style="padding-right: 0px;padding-left: 0px;" align="center"><![endif]-->
-<div style="font-size:1px;line-height:15px"> </div><img align="center" alt="Image" border="0" class="center fixedwidth" src="cid:logo.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; border: 0; height: auto; float: none; width: 100%; max-width: 120px; display: block;" title="Image" width="120"/>
+<div style="font-size:1px;line-height:15px"> </div><img align="center" alt="Image" border="0" class="center fixedwidth" src="cid:logo.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; border: 0; height: auto; float: none; width: 100%; max-width: 240px; display: block;" title="Image" width="240"/>
 <!--[if mso]></td></tr></table><![endif]-->
 </div>
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 5px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
@@ -400,7 +400,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#424262;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 14px; color: #424262; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-<p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><strong><span style="font-size: 28px; line-height: 33px;">Pantahub.com Password Reset</span></strong></p></p>
+<p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><strong><span style="font-size: 28px; line-height: 33px;">Pantacor Hub password reset</span></strong></p></p>
 <p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><span style="font-size: 24px;"><span style="line-height: 28px; font-size: 24px;">Hello {{.Nick}},</span></span></p>
 </div>
 </div>
@@ -473,6 +473,12 @@ Click the button below to reset your password.</p>
 <tr align="center" style="vertical-align: top; display: inline-block; text-align: center;" valign="top">
 <td style="word-break: break-word; vertical-align: top; padding-bottom: 5px; padding-right: 3px; padding-left: 3px; border-collapse: collapse;" valign="top"><a href="https://twitter.com/pantahub" target="_blank"><img alt="Twitter" height="32" src="cid:twitter.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; height: auto; float: none; border: none; display: block;" title="Twitter" width="32"/></a></td>
 <td style="word-break: break-word; vertical-align: top; padding-bottom: 5px; padding-right: 3px; padding-left: 3px; border-collapse: collapse;" valign="top"><a href="https://www.linkedin.com/company/pantacor/" target="_blank"><img alt="LinkedIn" height="32" src="cid:linkedin.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; height: auto; float: none; border: none; display: block;" title="LinkedIn" width="32"/></a></td>
+<td
+                                      style="word-break: break-word; vertical-align: top; padding-bottom: 5px; padding-right: 3px; padding-left: 3px; border-collapse: collapse;"
+                                      valign="top"><a href="https://www.reddit.com/r/pantacor/"
+                                        target="_blank"><img alt="Reddit" height="32" src="cid:reddit.png"
+                                          style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; height: auto; float: none; border: none; display: block;"
+                                          title="Reddit" width="32" /></a></td>
 </tr>
 </tbody>
 </table>
@@ -495,7 +501,8 @@ Click the button below to reset your password.</p>
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 50px; padding-left: 10px; padding-top: 15px; padding-bottom: 10px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#eaeaeb;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:15px;padding-right:50px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 14px; color: #eaeaeb; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-<p style="font-size: 14px; line-height: 16px; text-align: right; margin: 0;"><strong>Email:</strong> team@pantahub.com</p>
+<p style="font-size: 14px; line-height: 16px; color: #eaeaeb; text-align: right; margin: 0;"><strong>Email:</strong> <a href="mailto:team@pantacor.com" style="color: #eaeaeb;" 
+target="_blank">team@pantacor.com</a></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
