--- a/tmpl/mails/welcome.html
+++ b/tmpl/mails/welcome.html
@@ -396,8 +396,8 @@
                         <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr style="line-height:0px"><td style="padding-right: 0px;padding-left: 0px;" align="center"><![endif]-->
                         <div style="font-size:1px;line-height:15px"> </div><img align="center" alt="Image" border="0"
                           class="center fixedwidth" src="cid:logo.png"
-                          style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; border: 0; height: auto; float: none; width: 100%; max-width: 120px; display: block;"
-                          title="Image" width="120" />
+                          style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; border: 0; height: auto; float: none; width: 100%; max-width: 240px; display: block;"
+                          title="Image" width="240" />
                         <!--[if mso]></td></tr></table><![endif]-->
                       </div>
                       <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 5px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
@@ -440,7 +440,7 @@
                           <p style="font-size: 14px; line-height: 28px; text-align: center; margin: 0;"><span
                               style="font-size: 24px;"><span style="line-height: 28px; font-size: 24px;">Hello
                                 {{.Email}},</span></span><br /><strong><span
-                                style="font-size: 28px; line-height: 33px;">Welcome to Pantahub</span></strong></p>
+                                style="font-size: 28px; line-height: 33px;">Welcome to Pantacor Hub</span></strong></p>
                         </div>
                       </div>
                       <!--[if mso]></td></tr></table><![endif]-->
@@ -560,6 +560,12 @@
                                         target="_blank"><img alt="LinkedIn" height="32" src="cid:linkedin.png"
                                           style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; height: auto; float: none; border: none; display: block;"
                                           title="LinkedIn" width="32" /></a></td>
+                                    <td
+                                      style="word-break: break-word; vertical-align: top; padding-bottom: 5px; padding-right: 3px; padding-left: 3px; border-collapse: collapse;"
+                                      valign="top"><a href="https://www.reddit.com/r/pantacor/"
+                                        target="_blank"><img alt="Reddit" height="32" src="cid:reddit.png"
+                                          style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; height: auto; float: none; border: none; display: block;"
+                                          title="Reddit" width="32" /></a></td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -586,8 +592,9 @@
                         style="color:#eaeaeb;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:15px;padding-right:50px;padding-bottom:10px;padding-left:10px;">
                         <div
                           style="font-size: 12px; line-height: 14px; color: #eaeaeb; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;">
-                          <p style="font-size: 14px; line-height: 16px; text-align: right; margin: 0;">
-                            <strong>Email:</strong> team@pantahub.com</p>
+                          <p style="font-size: 14px; line-height: 16px; text-align: right; margin: 0; color: #eaeaeb">
+                            <strong>Email:</strong> <a href="mailto:team@pantacor.com" style="color: #eaeaeb;" 
+target="_blank">team@pantacor.com</a></p>
                         </div>
                       </div>
                       <!--[if mso]></td></tr></table><![endif]-->
